# fido

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_DEBUGGING.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.complex  LICENSE  LOGGING.md  QUICKSTART.md  RATE_LIMITING.md  README.md  TODO.md  TTYD_CONFIGURATION.md  WEB_TERMINAL_SETUP.md  WEB_TERMINAL_USER_GUIDE.md  fido-web-launcher.ps1  fly.toml  nginx.conf  run-local.sh  start-clean.ps1  start-minimal.sh  start-ttyd.ps1  start-ttyd.sh  start-web.sh  start.ps1  start.sh  test_rate_limit_integration.rs  ttyd-placeholder.bat  ttyd-style.css  ttyd.conf
.kiro/hooks/: changelog-updater.kiro.hook  code-quality-analyzer.kiro.hook
.kiro/specs/fido-mvp/: design.md  requirements.md  tasks.md
.kiro/specs/friends-system/: design.md  requirements.md  tasks.md
.kiro/specs/hashtag-backfill-migration/: design.md  requirements.md  tasks.md
.kiro/specs/hashtag-filter-bug-fix/: design.md  requirements.md  tasks.md
.kiro/specs/hashtag-system/: design.md  requirements.md  tasks.md
.kiro/specs/modal-system-refactor/: design.md  requirements.md  tasks.md
.kiro/specs/production-deployment/: design.md  requirements.md  tasks.md
.kiro/specs/threaded-conversations/: design.md  requirements.md  tasks.md
.kiro/specs/ui-ux-fixes/: design.md  requirements.md  tasks.md
.kiro/specs/vim-settings-navigation/: requirements.md
.kiro/specs/web-terminal-interface/: design.md  requirements.md  tasks.md
.kiro/steering/: fido-project-guidelines.md
docs/: fido_overview_v1.md
fido-migrate/: Cargo.toml  README.md
fido-migrate/proptest-regressions/: main.txt
fido-migrate/src/: main.rs
fido-server/: Cargo.toml  settings.toml
fido-server/proptest-regressions/api/: web_session.txt
fido-server/src/: config.rs  hashtag.rs  lib.rs  main.rs  mention.rs  middleware.rs  oauth.rs  rate_limit.rs  session.rs  state.rs  test_user_service.rs
fido-server/src/api/: auth.rs  config.rs  dms.rs  error.rs  friends.rs  hashtags.rs  mod.rs  posts.rs  profile.rs  web_session.rs
fido-server/src/db/: connection.rs  isolation.rs  mod.rs  schema.rs
fido-server/src/db/repositories/: config_repository.rs  dm_repository.rs  friend_repository.rs  hashtag_repository.rs  mod.rs  post_repository.rs  user_repository.rs  vote_repository.rs
fido-server/temp/: web_session.json
fido-server/tests/: hashtag_integration_tests.rs  oauth_config_test.rs  test_user_isolation_integration.rs
fido-tui/: Cargo.toml  DEBUG_LOGGING_IMPLEMENTATION.md  README.md
fido-tui/examples/: logging_config.rs
fido-tui/proptest-regressions/: mode.txt  storage.txt
fido-tui/proptest-regressions/app/: tests.txt
fido-tui/src/: auth.rs  config.rs  debug_log.rs  emoji.rs  lib.rs  logging.rs  main.rs  mode.rs  server_config.rs  session.rs  storage.rs  terminal.rs  text_wrapper.rs  ui.rs
fido-tui/src/api/: client.rs  error.rs  mod.rs
fido-tui/src/app/: handlers.rs  mod.rs  state.rs  tests.rs
fido-tui/src/ui/: formatting.rs  tabs.rs  theme.rs
fido-tui/src/ui/modals/: composer.rs  filters.rs  help.rs  mod.rs  posts.rs  social.rs  social_components.rs  social_refactored_example.rs  utils.rs
fido-tui/tests/: debug_log_test.rs  integration_test.rs
fido-types/: Cargo.toml  README.md
fido-types/src/: enums.rs  lib.rs  models.rs  user_context.rs
web/: 404.html  50x.html  index.html  script.js  style.css
