[workspace]
resolver = "2"
members = [
    "fido-types",
    "fido-server",
    "fido-tui",
    "fido-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fido Contributors"]
license = "MIT"
repository = "https://github.com/ianjamesburke/fido"
homepage = "https://github.com/ianjamesburke/fido"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# HTTP/API
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"
