[workspace]
resolver = "2"
members = [
    "fido-types",
    "fido-server",
    "fido-tui",
    "fido-migrate",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Ian Burke"]
license = "MIT"
repository = "https://github.com/ianjamesburke/fido"
homepage = "https://github.com/ianjamesburke/fido"

[workspace.dependencies]
# Core serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Database layer
rusqlite = { version = "0.37", features = ["bundled"] }

# HTTP server and client
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"

# Terminal UI framework
ratatui = "0.28"
crossterm = "0.28"

# Command line interface
clap = { version = "4.4", features = ["derive", "env"] }

# Observability and debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration management
dotenv = "0.15"

# Additional shared dependencies
async-trait = "0.1"
log = "0.4"
simplelog = "0.12"
config = { version = "0.15.19", features = ["toml"] }
regex = "1.10"
once_cell = "1.19"
urlencoding = "2.1"
lazy_static = "1.4"

# Testing
proptest = "1.4"

# Internal workspace crates
fido-types = { path = "fido-types", version = "0.1.4" }
